[gd_scene load_steps=4 format=3 uid="uid://d2sc6of36lks6"]

[ext_resource type="Script" uid="uid://cm7c4wo47rlwe" path="res://entities/sked/operation/operation.gd" id="1_mrb2e"]
[ext_resource type="PackedScene" uid="uid://cyr4dfy8qnwh6" path="res://entities/token/token.tscn" id="2_vylg2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vylg2"]

[node name="Operation" type="PanelContainer"]
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxEmpty_vylg2")
script = ExtResource("1_mrb2e")

[node name="Tokens" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="ConditionBox" type="HBoxContainer" parent="Tokens"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="ConditionToken" parent="Tokens/ConditionBox" instance=ExtResource("2_vylg2")]
unique_name_in_owner = true
layout_mode = 2

[node name="ConditionLabel" type="Label" parent="Tokens/ConditionBox"]
layout_mode = 2
text = "-"

[node name="ResultTokens" type="HBoxContainer" parent="Tokens"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1
